组件化功能的引入

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ComponentTest</string>
+    <string name="main_app_name">ComponentTest</string>
 </resources>
